# pilot-spacex

./: CLAUDE.md
.planning/: REQUIREMENTS.md  (+2 more)
authcore/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
authcore/alembic/: env.py
authcore/alembic/versions/: 001_create_users.py  002_create_refresh_tokens.py  003_create_audit_logs.py
authcore/src/authcore/: config.py  main.py
authcore/src/authcore/api/dependencies/: auth.py
authcore/src/authcore/api/v1/middleware/: error_handler.py  request_id.py
authcore/src/authcore/api/v1/routers/: admin.py  auth.py
authcore/src/authcore/container/: container.py
authcore/src/authcore/domain/: exceptions.py
authcore/src/authcore/domain/models/: audit_log.py  refresh_token.py  user.py
authcore/src/authcore/domain/services/: password_policy.py  token_family.py
authcore/src/authcore/infrastructure/cache/: redis_client.py
authcore/src/authcore/infrastructure/database/: base.py  engine.py
authcore/src/authcore/infrastructure/email/: email_service.py  smtp_email_service.py
authcore/src/authcore/infrastructure/tokens/: jwt_service.py  key_manager.py
authcore/tests/: conftest.py
authcore/tests/integration/services/: test_admin_services.py  test_auth_flows.py  test_login_service.py  test_register_service.py
authcore/tests/unit/: test_auth_dependency.py  test_base_repository.py  test_engine.py  test_middleware.py  test_redis_client.py  test_schemas.py  test_smtp_email.py
authcore/tests/unit/domain/: test_password_policy.py  test_token_family.py  test_user_entity.py
(+249 files in other folders)
